<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/dl2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/b3r"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <com.example.lenovo.jd.utils.XCRoundImageView
                    android:id="@+id/iv_login1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/b3h"
                    />
                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/my_login"
                    android:textColor="@color/login_my" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <ImageView
                    android:id="@+id/iv_set"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/a9w" />

                <ImageView
                    android:id="@+id/iv_news"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/a9t" />
            </LinearLayout>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b3z" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_user_collection"
                    android:drawableLeft="@drawable/ic_user_order"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_normal_dot_left"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    android:text="@string/user_all_order" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_user_collection"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_order_wait_pay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_order_wait_pay"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_order_wait_pay"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_order_wait_drive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_order_wait_drive"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_order_wait_drive"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_order_wait_receipt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_order_wait_receipt"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_order_wait_receipt"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_order_wait_comment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_order_wait_comment"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_order_wait_comment"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_order_wait_refund"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_order_wait_refund"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_order_wait_refund"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/user_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_user_collection"
                    android:drawableLeft="@drawable/ic_user_property"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_normal_dot_left"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    android:text="@string/user_property" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_user_collection"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_property_money"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_property_money"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_property_money"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_property_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_property_card"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_property_card"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_property_vouchers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_property_vouchers"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_property_vouchers"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_property_red"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_property_red"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_property_red"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/user_property_integral"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_user_property_integral"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/user_property_integral"
                        android:textColor="@color/color_user_order"
                        android:textSize="10sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/user_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_user_collection"
                    android:drawableLeft="@drawable/ic_user_address"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_normal_dot_left"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    android:text="@string/user_address" />

                <TextView
                    android:id="@+id/user_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_user_collection"
                    android:drawableLeft="@drawable/ic_user_setting"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_normal_dot_left"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    android:text="@string/user_setting" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</LinearLayout>
